# summarize

api/: .coverage  pyproject.toml  ruff.toml  ty.toml
api/src/: main.py
api/tests/: test_main.py
